--- a/index.html
+++ b/index.html
@@ -1,23 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kings of Leon</title>
+    <!-- Bootstrap CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Document</title>
 </head>
-<body>
-    <header>
-        <h1>Bootstrap Example</h1>
-    </header>
-    <main>
-        <p>Install boostrap on this page</p>
+
+<body class="bg-dark text-info">
+    <!-- carousel-->
+    <div class="container">
+
+        <h1 class="text-center">Kings Of Leon</h1>
+        <div id="carouselSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/la.jpg" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/ny.jpg" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/chicago.jpg" class="d-block w-100">
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- Main content -->
+    <main class="container pt-4">
+        <div class="row">
+            <!-- Tour list of dates-->
+            <aside class="col-md-4">
+                <h2>Catch them on tour</h2>
+                <ul>
+                    <li>06/03/2021 - Mumbai</li>
+                    <li>17/08/2021 - New York</li>
+                    <li>05/11/2021 - TBC</li>
+                    <li>15/12/2021 - TBC</li>
+                </ul>
+            </aside>
+
+            <!-- About the band -->
+            <section class="col-md-5">
+                <h2>About the Band</h2>
+                <p>Kings of Leon is an American rock band that formed in Nashville, Tennessee, in 1999.
+                  The band is composed of brothers Caleb, Nathan and Jared Followill with their cousin Matthew Followill. 
+                  ... After the release of Only by the Night in September 2008, the band achieved chart success in the United States..</p>
+                  
+                 <!-- Video -->    
+                <div class="iframe-container">
+                    <iframe class="responsive-iframe" src="https://www.youtube.com/embed/gnhXHvRoUd0" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
+                    picture-in-picture" allowfullscreen>></iframe>
+                </div>
+            </section>
+        </div>
     </main>
-    <aside>
-        <p>Sidebar Content</p>
-    </aside>
-    <footer>
-        <p>&copy; 2020</p>
+
+    <!-- Footer -->
+    <footer class="row">
+        <div class="col-md-12 footer p-4">
+            <p class="text-center">&reg; 2021 | <a href="#">Al rights reserved</a></a></p>
+        </div>
     </footer>
+
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
