simple-responsive-website

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h2>About the Band</h2>
                 <p>Kings of Leon is an American rock band that formed in Nashville, Tennessee, in 1999.
                   The band is composed of brothers Caleb, Nathan and Jared Followill with their cousin Matthew Followill. 
-                  ... After the release of Only by the Night in September 2008, the band achieved chart success in the United States..</p>
+                  ... After the release of Only by the Night in September 2008, the band achieved chart success in the United States.</p>
                   
                  <!-- Video -->    
                 <div class="iframe-container">
