--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <div id="carouselSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/la.jpg" class="d-block w-100">
+                    <img src="img/la.jpg" class="d-block w-100" alt="los angeles">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/ny.jpg" class="d-block w-100">
+                    <img src="img/ny.jpg" class="d-block w-100" alt="New York">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/chicago.jpg" class="d-block w-100">
+                    <img src="img/chicago.jpg" class="d-block w-100" alt="chicago">
                 </div>
 
             </div>
@@ -56,7 +56,7 @@
                   
                  <!-- Video -->    
                 <div class="iframe-container">
-                    <iframe class="responsive-iframe" src="https://www.youtube.com/embed/gnhXHvRoUd0" frameborder="0"
+                    <iframe class="responsive-iframe" title = "kings of leon video" src="https://www.youtube.com/embed/gnhXHvRoUd0" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
                     picture-in-picture" allowfullscreen>></iframe>
                 </div>
